# vkaml

./: .clang-format  .gitignore  LICENSE  README.md  vkaml.opam
config/: discover.ml  dune
example/: dune  main.ml
lib/: desc.ml  desc.mli  dune  structs.ml  stubs.ml  stubs.mli  vkaml.ml  vkaml.mli  vulkaml.ml  vulkaml.mli
lib/c/: arena.h  context.h  glfw_stubs.c  stubs.c  utils.c  utils.h  vkaml_arena.c  vkaml_arena.h  vkaml_backend.c  vkaml_backend.h  vkaml_platform.c  vkaml_platform.h  vkaml_stubs.c  vkaml_stubs.h  vkaml_types.c  vkaml_types.h  vulkan_base.c  vulkan_base.h  vulkan_helpers.c  vulkan_helpers.h  vulkan_stubs.c
lib/c/glfw/: stubs.h
lib/c/vulkan/: structs.h  stubs.h
