(include_subdirs unqualified)

(library
 (name vkaml)
 (public_name vkaml)
 (modules vkaml desc)
 (preprocess
  (pps ppx_cstruct))
 (libraries core echo)
 (foreign_stubs
  (language c)
  (names
   (:standard \ *.c))
  (flags
   (:include vkaml_flags.sexp)))
 (c_library_flags
  (:include vkaml_library_flags.sexp)))

(rule
 (targets vkaml_flags.sexp vkaml_library_flags.sexp)
 (deps
  (:discover %{project_root}/config/discover.exe))
 (action
  (run %{discover})))
